--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "react-chat-tutorial",
+  "name": "Schlack",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@pusher/chatkit": "^0.7.17",
     "cors": "^2.8.4",
-    "env2": "^2.2.2",
     "express": "^4.16.3",
     "pusher-chatkit-server": "^0.12.0",
     "react": "^16.2.0",
